2010-08-22  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Updated README
	* README

2010-08-22  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Removed uitos(). Use util::uitos() instead.
	* src/SocketCore.cc

2010-08-21  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Don't try to send empty string.
	* src/SocketBuffer.cc
	* src/SocketBuffer.h

2010-08-14  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Listen both IPv4 and IPv6 for BitTorrent protocol.
	* src/BtSetup.cc
	* src/PeerListenCommand.cc
	* src/PeerListenCommand.h

2010-08-14  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added debug log
	* src/DHTPeerLookupTask.cc

2010-08-14  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Initialized cur_ with values_.end()
	* src/Sequence.h

2010-08-08  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Listen both IPv4 and IPv6 for xml-rpc request.
	* src/DownloadEngineFactory.cc
	* src/HttpListenCommand.cc
	* src/HttpListenCommand.h

2010-08-07  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Updated malformed message handling.
	* src/DHTMessageTracker.cc
	* src/DHTMessageTracker.h

2010-08-07  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Evaluate callback is non-null.
	* src/DHTMessageTracker.cc

2010-08-07  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added IPv6 DHT. Added --dht-entry-porint6, --dht-file-path6,
	--dht-listen-addr6 and --enable-dht6 option.  IPv6 DHT is disabled
	by default. To use IPv6 DHT, you need to use --enable-dht6 and
	specify a global unicast address to --dht-listen-addr6.  IPv6 DHT
	is highly experimental.
	* src/BtSetup.cc
	* src/DHTAutoSaveCommand.cc
	* src/DHTAutoSaveCommand.h
	* src/DHTConnectionImpl.cc
	* src/DHTConnectionImpl.h
	* src/DHTEntryPointNameResolveCommand.cc
	* src/DHTFindNodeReplyMessage.cc
	* src/DHTFindNodeReplyMessage.h
	* src/DHTGetPeersMessage.cc
	* src/DHTGetPeersReplyMessage.cc